gccida/g0/init_regs
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_regs/src/regclass.c:1070:34: error: use of undeclared identifier 'machine_mode'
top_of_stack[i] = gen_rtx_MEM( ( machine_mode)i, global_rtl[2]); 
                                 ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_regs/src/obj/regclass.o] Error 1
